--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do</title>
+    <link rel="icon" type="image/png" href="images/list.png">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container"><h1>To-Do</h1>
+        <div class="input-container">
+            <input type="text" id="new task" placeholder="Add a new task">
+            <button id="add task button"><img src="images/add_task.png" alt="add task"> </button>
+           <!-- <i class="fa-duotone fa-clipboard"></i>-->
+        </div></div>
+</body>
+</html>
