--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>To-Do</title>
     <link rel="icon" type="image/png" href="images/list.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/to-do-list.png">
 </head>
 <body>
     <div class="container"><h1>To-Do</h1>
